tests/baselines/reference/baseConstraintOfDecorator.errors.txt
tests/cases/compiler/baseConstraintOfDecorator.ts(2,5): error TS2322: Type 'typeof decoratorFunc' is not assignable to type 'TFunction'.
  'typeof decoratorFunc' is assignable to the constraint of type 'TFunction', but 'TFunction' could be instantiated with a different subtype of constraint '{}'.
tests/cases/compiler/baseConstraintOfDecorator.ts(2,40): error TS2507: Type 'TFunction' is not a constructor function type.
tests/cases/compiler/baseConstraintOfDecorator.ts(12,5): error TS2322: Type 'typeof decoratorFunc' is not assignable to type 'TFunction'.
tests/cases/compiler/baseConstraintOfDecorator.ts(12,40): error TS2507: Type 'TFunction' is not a constructor function type.


==== tests/cases/compiler/baseConstraintOfDecorator.ts (4 errors) ====
    export function classExtender<TFunction>(superClass: TFunction, _instanceModifier: (instance: any, args: any[]) => void): TFunction {
        return class decoratorFunc extends superClass {
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                           ~~~~~~~~~~
!!! error TS2507: Type 'TFunction' is not a constructor function type.
!!! related TS2735 tests/cases/compiler/baseConstraintOfDecorator.ts:1:31: Did you mean for 'TFunction' to be constrained to type 'new (...args: any[]) => unknown'?
            constructor(...args: any[]) {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                super(...args);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
                _instanceModifier(this, args);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            }
    ~~~~~~~~~
        };
    ~~~~~~
!!! error TS2322: Type 'typeof {|decoratorFunc|0|}' is not assignable to type '{|TFunction|1|}'.
!!! error TS2322:   'typeof {|decoratorFunc|2|}' is assignable to the constraint of type '{|TFunction|3|}', but '{|TFunction|4|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/compiler/baseConstraintOfDecorator.ts:2:18
!!! annotated symbol 1 tests/cases/compiler/baseConstraintOfDecorator.ts:1:31
!!! annotated symbol 2 tests/cases/compiler/baseConstraintOfDecorator.ts:2:18
!!! annotated symbol 3 tests/cases/compiler/baseConstraintOfDecorator.ts:1:31
!!! annotated symbol 4 tests/cases/compiler/baseConstraintOfDecorator.ts:1:31
    }
    
    class MyClass { private x; }
    export function classExtender2<TFunction extends new (...args: string[]) => MyClass>(superClass: TFunction, _instanceModifier: (instance: any, args: any[]) => void): TFunction {
        return class decoratorFunc extends superClass {
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                           ~~~~~~~~~~
!!! error TS2507: Type 'TFunction' is not a constructor function type.
!!! related TS2735 tests/cases/compiler/baseConstraintOfDecorator.ts:11:32: Did you mean for 'TFunction' to be constrained to type 'new (...args: any[]) => MyClass'?
            constructor(...args: any[]) {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                super(...args);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
                _instanceModifier(this, args);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            }
    ~~~~~~~~~
        };
    ~~~~~~
!!! error TS2322: Type 'typeof {|decoratorFunc|0|}' is not assignable to type '{|TFunction|1|}'.
!!! annotated symbol 0 tests/cases/compiler/baseConstraintOfDecorator.ts:12:18
!!! annotated symbol 1 tests/cases/compiler/baseConstraintOfDecorator.ts:11:32
    }
    